--- a/registerphone.css
+++ b/registerphone.css
@@ -6,7 +6,7 @@
 #test-form{
     display: flex;
     align-items: center;
-    background: url('photos/paperreg1.png') no-repeat center center/cover;
+    background: url('photos/paperreg1.webp') no-repeat center center/cover;
 }
 
 
