--- a/registration.css
+++ b/registration.css
@@ -6,7 +6,7 @@
     height: 100vh;
     display: flex;
     align-items: center;
-    background: url('Photos/registrationbg.webp') no-repeat center center/cover;
+    background: url('photos/registrationbg.webp') no-repeat center center/cover;
 }
 
 
