--- a/registration.css
+++ b/registration.css
@@ -9,7 +9,18 @@
     background: url('registrationbg.svg') no-repeat center center/cover;
 }
 
-
+#telegram_channel{
+    color: rgb(200, 255, 0);
+    padding: 10px;
+    background-color: rgb(4, 175, 213);
+    border-radius: 3px;
+    position: relative;
+    top: -20px;
+}
+p{
+    color: red;
+    line-height: 1;
+}
 .register {
     background: rgb(113, 222, 255);
     border-radius: 1.5rem;
